--- a/hafiza.html
+++ b/hafiza.html
@@ -33,7 +33,7 @@
   }
 
   input[type="number"], input[type="text"] {
-    width: 120px;
+    width: 160px;
     padding: 5px;
     font-size: 14px;
   }
@@ -41,7 +41,7 @@
   button {
     display: inline-block;
     width: auto;
-    max-width: 150px;
+    max-width: 180px;
     padding: 5px 15px;
     font-size: 14px;
     cursor: pointer;
@@ -61,16 +61,18 @@
   <div>
     <label>Kelime listesi:
       <select id="sourceSelect">
-        <option value="1hece">1 heceliler</option>
-        <option value="2hece">2 heceliler</option>
-        <option value="3hece">3 heceliler</option>
+        <option value="5harf">5 harfliler</option>
+        <option value="6harf">6 harfliler</option>
+        <option value="7harf">7 harfliler</option>
+        <option value="8harf">8 harfliler</option>
+        <option value="9harf">9 harfliler</option>
       </select>
     </label>
     <button type="button" onclick="loadWordsFromServer()">Yükle</button>
   </div>
 
   <div>
-    <label>Süre(ms):</label>
+    <label>Süre (ms):</label>
     <input type="number" id="duration" value="3000" min="100" max="5000" step="100">
   </div>
   <button id="startBtn" onclick="startTest()">Başlat</button>
@@ -97,11 +99,13 @@ let timeoutId = null;
 
 const sourceSelect = document.getElementById('sourceSelect');
 
-// Sunucudaki TXT dosyalarının adresleri
+/* 🔥 Yeni kaynaklar: HizliOkuma/Kelimeler dizini */
 const SOURCES = {
-  "1hece": "https://ilhantopaloglu.github.io/HizliOkuma/1heceliler.txt",
-  "2hece": "https://ilhantopaloglu.github.io/HizliOkuma/2heceliler.txt",
-  "3hece": "https://ilhantopaloglu.github.io/HizliOkuma/3heceliler.txt"
+  "5harf": "https://ilhantopaloglu.github.io/HizliOkuma/Kelimeler/5harfliler.txt",
+  "6harf": "https://ilhantopaloglu.github.io/HizliOkuma/Kelimeler/6harfliler.txt",
+  "7harf": "https://ilhantopaloglu.github.io/HizliOkuma/Kelimeler/7harfliler.txt",
+  "8harf": "https://ilhantopaloglu.github.io/HizliOkuma/Kelimeler/8harfliler.txt",
+  "9harf": "https://ilhantopaloglu.github.io/HizliOkuma/Kelimeler/9harfliler.txt"
 };
 
 // 🔥 100 ms aralıklı süre yuvarlama
@@ -109,7 +113,7 @@ document.getElementById("duration").addEventListener("input", function() {
     let val = parseInt(this.value, 10);
     if (isNaN(val) || val < 100) val = 100;
     if (val > 5000) val = 5000;
-    val = Math.round(val / 100) * 100;  // 🔥 100 ms'ye yuvarla
+    val = Math.round(val / 100) * 100;
     this.value = val;
 });
 
@@ -122,10 +126,16 @@ async function loadWordsFromServer() {
   }
 
   try {
-    const res = await fetch(url + "?_t=" + Date.now()); // cache kırmak için
+    const res = await fetch(url + "?_t=" + Date.now()); // cache kır
     if (!res.ok) throw new Error("Dosya okunamadı: " + res.status);
     const text = await res.text();
-    words = text.split(/\s+/).map(w => w.trim()).filter(w => w !== '');
+
+    // 🔥 Satır satır okuma (kelimeler alt alta)
+    words = text
+      .split(/\r?\n/)
+      .map(w => w.trim())
+      .filter(w => w !== '');
+
     if (words.length < 4) {
       alert("Seçtiğiniz dosyada en az 4 kelime olmalı.");
       return;
