--- a/hafiza.html
+++ b/hafiza.html
@@ -159,6 +159,7 @@
       <div class="field">
         <label>Kelime listesi seç:</label>
         <select id="sourceSelect">
+          <option value="5harf">4 harfliler</option>
           <option value="5harf">5 harfliler</option>
           <option value="6harf">6 harfliler</option>
           <option value="7harf">7 harfliler</option>
@@ -213,6 +214,7 @@
   // GitHub Pages txt çekme
   const BASE = "https://kronosegitim.github.io/HizliOkuma/Kelimeler/";
   const SOURCES = {
+    "4harf": BASE + "4harfliler.txt",
     "5harf": BASE + "5harfliler.txt",
     "6harf": BASE + "6harfliler.txt",
     "7harf": BASE + "7harfliler.txt",
@@ -456,3 +458,4 @@
 </script>
 </body>
 </html>
+
