--- a/hafiza.html
+++ b/hafiza.html
@@ -159,6 +159,7 @@
       <div class="field">
         <label>Kelime listesi seç:</label>
         <select id="sourceSelect">
+          <option value="3harf">3 harfliler</option>
           <option value="4harf">4 harfliler</option>
           <option value="5harf">5 harfliler</option>
           <option value="6harf">6 harfliler</option>
@@ -214,6 +215,7 @@
   // GitHub Pages txt çekme
   const BASE = "https://kronosegitim.github.io/HizliOkuma/Kelimeler/";
   const SOURCES = {
+    "3harf": BASE + "3harfliler.txt",
     "4harf": BASE + "4harfliler.txt",
     "5harf": BASE + "5harfliler.txt",
     "6harf": BASE + "6harfliler.txt",
@@ -458,5 +460,6 @@
 </script>
 </body>
 </html>
+
 
 
