--- a/kelime.html
+++ b/kelime.html
@@ -54,6 +54,7 @@
     <!-- LİSTE SEÇİMİ -->
     <label>Kelime uzunluğu:
       <select id="sourceSelect">
+        <option value="3harf">3 harfliler</option>
         <option value="4harf">4 harfliler</option>
         <option value="5harf">5 harfliler</option>
         <option value="6harf">6 harfliler</option>
@@ -111,6 +112,7 @@
     const BASE_URL = "https://raw.githubusercontent.com/KronosEgitim/HizliOkuma/main/Kelimeler/";
 
     const SOURCES = {
+      "3harf": BASE_URL + "3harfliler.txt",
       "4harf": BASE_URL + "4harfliler.txt",
       "5harf": BASE_URL + "5harfliler.txt",
       "6harf": BASE_URL + "6harfliler.txt",
@@ -282,5 +284,6 @@
   </script>
 </body>
 </html>
+
 
 
